# dvdxchap

./: .clang-format  .gitignore  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  README  README.md  TODO  ac3_common.c  acinclude.m4  autogen.sh  common.c  common.h  configure.in  dvdxchap.1  dvdxchap.c  generic.cpp  mp3_common.c  ogmcat.1  ogmcat.cpp  ogmdemux.1  ogmdemux.c  ogminfo.1  ogminfo.c  ogmmerge.1  ogmmerge.cpp  ogmmerge.h  ogmsplit.1  ogmsplit.cpp  ogmstreams.h  ogmtools.spec  os.h  p_ac3.cpp  p_ac3.h  p_index.cpp  p_index.h  p_mp3.cpp  p_mp3.h  p_pcm.cpp  (+31 more)
avilib/: .cvsignore  Makefile.am  avidump.c  avilib.c  avilib.h  avimisc.c  xio.c
debian/: README.Debian  changelog  control  copyright  rules
