dnl process this file with autoconf to generate the configure script

AC_INIT(ogmmerge.cpp)
AM_INIT_AUTOMAKE(ogmtools,1.5)

AC_PROG_CC
AC_PROG_CXX
AC_PROG_GCC_TRADITIONAL
AC_PROG_CPP
AC_PROG_RANLIB

XIPH_PATH_OGG()
XIPH_PATH_VORBIS()
PATH_AVILIB()
PATH_DEBUG()
PATH_PROFILING()

dnl
dnl libdvdread support
dnl

have_dvdread=no
AM_PATH_LIBDVDREAD(AC_DEFINE(HAVE_LIBDVDREAD))
AM_CONDITIONAL(HAVE_LIBDVDREAD, test x"$have_dvdread" = "xyes")

AC_CHECK_FUNCS(fseeko)
if test x${ac_cv_func_fseeko} != xyes; then
AC_DEFINE(NEED_FSEEKO)
fi

dnl Check for headers
AC_HEADER_STDC()

CFLAGS="-Wall -Wno-sign-compare @OGG_CFLAGS@ @VORBIS_CFLAGS@ @AVILIB_CFLAGS@ @DEBUG_CFLAGS@ @PROFILING_CFLAGS@"
CXXFLAGS="-Wall -Wno-sign-compare @OGG_CFLAGS@ @VORBIS_CFLAGS@ @AVILIB_CFLAGS@ @DEBUG_CFLAGS@ @PROFILING_CFLAGS@"

AC_OUTPUT(Makefile avilib/Makefile)
